[project]
name = "Stellaris-Mod-Deploy-Action"
dynamic = ["version"]
requires-python = ">= 3.12"
license = "GPL-3.0-or-later"
readme = "README.md"

dependencies = [
    "pytest >= 8.3",
]

[tool.ruff]
line-length = 128
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["ALL", "D101", "RET502"]
ignore = [
    "ERA001",
    "D1",
    "D212",
    "D400",
    "D401",
    "D415",
    "T2",
    "TD002",
    "TD003",
    "RET5",
    "S101",
    "FA100",
    "FA102",
    "S311",
    "C901",
    "PLR1711",
    "PLR0912",
    "PLR0915",
    "PLW2901",
    "PIE790",
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
