[project]
name = "Stellaris-Mod-Deploy-Action"
version = "0.1.0"
requires-python = "== 3.13.*"
license = "GPL-3.0-or-later"
readme = "README.md"

authors = [
   { name = "Aerolfos" },
]

dependencies = [
    # no dependencies, only use std lib unless developing
]

# dependency groups is uv-specific and not (yet) supported by dependabot so packages are not included in updates
# support is "Soon(TM)"
[project.optional-dependencies]
dev = [
    "pytest==9.0.2",
    "ty==0.0.8",
]
lint = [
    "ruff==0.14.10",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "ty==0.0.8",
]
lint = [
    "ruff==0.14.10",
]

# uv
[tool.uv]
package = false
default-groups = ["dev", "lint"]

# make requirements.txt file with
# uv export --no-hashes --format requirements-txt > requirements.txt

# ruff
[tool.ruff]
line-length = 128
indent-width = 4

target-version = "py313"

[tool.ruff.lint]
select = ["ALL", "D101", "RET502"]
ignore = [
    "ERA001",
    "D1",
    "D212",
    "D400",
    "D401",
    "D415",
    "T2",
    "TD002",
    "TD003",
    "RET5",
    "S101",
    "FA100",
    "FA102",
    "S311",
    "C901",
    "PLR1711",
    "PLR0912",
    "PLR0915",
    "PLW2901",
    "PIE790",
    "COM812", # covered by formatter
]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
pythonpath = ["."]
